<resources>
    <string name="app_name">Ebnutii 5 okn</string>
    <string name="login">Авторизация</string>
    <string name="app_name2">JavaApp</string>
    <string name="start_text1">Привет, ты хочешь запустить свой бизнес?</string>
    <string name="text_button1">Да, хочу!</string>
    <string name="text_button2">Нет, я хочу посмотреть товары</string>
    <string name="vhod">Войти</string>
    <string name="nohaveacc">У меня нет аккаунта</string>
    <string name="find_member">Поиск сотрудника</string>
    <string name="member">Наш алгоритм подобрал несколько зданий для вашей кофейни, мы основывались на плотности населений,
        количестве конкурентов, и средней цены за аренду помоещения.</string>
    <string name="member_button">Выбрать соискателя</string>
</resources>