<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginVertical="30sp"
    android:layout_marginHorizontal="36sp"
    tools:context=".members">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:src="@drawable/members"
        android:layout_gravity="center"
        android:contentDescription="@string/member"
        android:layout_weight="1"
        android:layout_height="1sp"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:fontFamily="@font/montserrat_extrabold"
        android:textColor="@color/regular"
        android:textSize="22sp"
        android:text="@string/find_member"

        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/member"
        android:textSize="22sp"
        android:layout_weight="1"

        />
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:background="@drawable/bg_first_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/member_button"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>